[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Pixel Tactical.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/FullScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/mago1.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MenuButton" parent="ColorRect" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1119.0
margin_top = 9.0
margin_right = 1271.0
margin_bottom = 66.0

[node name="Title" type="Label" parent="ColorRect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 387.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "Opções"
align = 1

[node name="FullScreen" type="Button" parent="ColorRect"]
margin_left = 63.0
margin_top = 162.0
margin_right = 359.0
margin_bottom = 194.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Colocar em modo tela cheia"
flat = true
script = ExtResource( 3 )

[connection signal="mouse_entered" from="ColorRect/FullScreen" to="ColorRect/FullScreen" method="_on_FullScreen_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/FullScreen" to="ColorRect/FullScreen" method="_on_FullScreen_mouse_exited"]
[connection signal="pressed" from="ColorRect/FullScreen" to="ColorRect/FullScreen" method="_on_FullScreen_pressed"]
